paintShop: fixed the list items with times being squashed.

--- a/frontend/app/paintShop/assets/list.css
+++ b/frontend/app/paintShop/assets/list.css
@@ -12,6 +12,7 @@
   height: 100%;
 }
 .paintShop-list-item {
+  flex: 0 0 auto;
   line-height: 50px;
   font-size: 32px;
   text-align: center;
